--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.15",
-    "react-browser-router": "^2.1.2",
+    "react-burger-menu": "^2.6.12",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
