--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "ESLINT": "^6.8.0",
+    "babel-eslint": "^10.0.3",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.17.0"
   }
