--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint --cache --ignore-path .gitignore ."
+    "lint": "eslint --cache --ignore-path .gitignore .",
+    "lint-fix": "eslint --cache --ignore-path .gitignore . --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,7 +43,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "ESLINT": "^6.8.0",
+    "eslint": "^6.8.0",
     "babel-eslint": "^10.0.3",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.17.0"
